src/style.css
/* CSS COLOR VARIABLES */
@import url("globals.css");
@import url("nav.css");

body {
    background-color: white;
    color: var(--UI-PRIMARY-000);
    margin:0;
    padding:0;
}

nav {
    text-align: right;
    padding: 1em 1em;
    cursor: pointer;
    grid-column: span 12;
    margin-top:-66px;
}

body {
    font-family: "Noto Sans", sans-serif;
    font-size: var(--fs-2);
}

p {
    line-height: var(--fs-4);
}

a {
    font-weight: bold;
    color:  var(--UI-PRIMARY-600);
}

h1 {
    color:  var(--UI-PRIMARY-300);
}

h2 {
    font-family: "Poetsen One", sans-serif;
    font-size: var(--fs-4);
    color:  var(--UI-PRIMARY-400);
    margin-bottom: 0;
}

h3 {
    font-family: "Noto Sans", sans-serif;
    font-size: var(--fs-3);
    font-weight: 400;
    font-style: italic;
    color:  var(--UI-PRIMARY-600);
     margin-top: 0.5rem;
}

.quote {
    position: relative;
    margin: auto;
    top: 20%;
    background: var(--UI-PRIMARY-800);
    padding: 1em;
    border-left: 10px solid var(--UI-PRIMARY-400);
}
.quote figcaption,
.quote blockquote {
    margin: 1.5rem;
}
blockquote {
    font-size: var(--fs-3);
    background: var(--UI-PRIMARY-800); 
    quotes: "\201C""\201D""\2018""\2019";
}
blockquote:before {
    color: var(--UI-PRIMARY-400);
    content: open-quote;
    font-size: 4em;
    line-height: 0.1em;
    margin-right: 0.25em;
    vertical-align: -0.4em;
}
blockquote p {
    display: inline;
}

footer {
    text-align: center;
    padding: 2em 0;
    color: var(--UI-PRIMARY-800);
    background-color: var(--UI-PRIMARY-000);
}

header {
    background-color: var(--UI-PRIMARY-900);
    height: 126px;
    padding: 0 1em 0em 1em;
    border-bottom: 2px solid var(--UI-PRIMARY-600);
    background-size: auto 30%;
    background-repeat: repeat-x;
    background-position-y: 85%;
    background-position-x: 200px;
    margin: 0;
    animation: bg-scroll 30s linear infinite;
}

header, footer, main {
  grid-column: span 12; /* Header and footer span all 12 columns */
  margin: 0;
}

header, footer {
    div {
        max-width: 1200px; 
        margin: 0 auto
    }
}
label {
    font-weight: 500;
    color: var(--UI-PRIMARY-300);
}
input {
    height: 2rem;
}
input, textarea {
    font-size: var(--fs-2);
    display: block;
    width: 400px;
    border-radius: 4px;
    padding: 8px;
    background-color: white;
    border: 1px solid var(--UI-PRIMARY-800);
}

form button {
    font-size: var(--fs-3);
    border-radius: 4px;
    padding: 0.25rem var(--fs-0);
    margin-bottom: 1rem;
    background-color: var(--UI-PRIMARY-500);
    color: white;
    text-decoration: none;
    border: none;
    &:hover {
        background-color: var(--UI-PRIMARY-700);
        cursor: pointer;
    }
}

@keyframes bg-scroll {
    from { background-position: 200px 85%; }
    to   { background-position: -200px 85%; }
}

/* GLOBAL LAYOUT STUFF BELOW */

.container {
    display: grid;
    grid-template-columns: repeat(12, 1fr); /* 12 equal-width columns */
    gap: 8px; /* Spacing between grid items */
    margin: 0 auto; /* Center the container */
    row-gap: 0;
    padding: 0;
}

.main-content {
  grid-column: span 12; /* Main content spans 12 columns */
}

/* Responsive adjustments for smaller screens */
@media (max-width: 768px) {
    .main-content, .sidebar {
        grid-column: span 12; /* On smaller screens, both span all 12 columns */
    }
}

@media (prefers-reduced-motion: reduce) {
    header {
        animation: none !important;
        transition: none !important;
    }
}

.logo-container {
    display: inline-block;
    background-color: var(--UI-PRIMARY-900); 
    box-shadow: 8px 0px 8px var(--UI-PRIMARY-900), -8px 0px 8px var(--UI-PRIMARY-900);
  /*  background-color: hsl(146 24% 94% / 0.6); */
    padding: 1rem 1rem 0rem 1rem;
}

.hero-section {
    text-align: left;
    margin: 0 auto;
    background-color: white;
    .hero-text {
        grid-column: span 8;
        width: 75%;
        margin: auto;
        z-index: 999;
        @media (max-width: 768px) {
             grid-column: span 12;
             z-index: 999;
        }
        h1 {
            font-family: 'poetsen one', sans-serif;
            font-size: var(--fs-7);
            color: var(--UI-PRIMARY-500);
            margin-bottom: 0;
            @media (max-width: 768px) {
                font-size: var(--fs-5);
            }
        }
        p {
            font-size: var(--fs-3);
            line-height: var(--fs-5);
            @media (max-width: 768px) {
                font-size: var(--fs-2);
                line-height: var(--fs-4);
            }
        }
    }
    img {
        grid-column: span 4;
        width: 100%;
        height: auto;
        margin-bottom: -20%;
        @media (max-width: 768px) {
            position: absolute;
            grid-column: span 12;
            margin: 0 0 0 30%;
            opacity: 0.3;
            height: 350px;
        }
    }
    .width-limit {
        position: relative;
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-column: span 12;
        max-width: 1200px; 
        margin: 0 auto;
        min-height: 270px;
        /* overflow-x: hidden; */
        @media (max-width: 768px) {
            position: relative;
            overflow-x: hidden;
        }
    }
}
/*
#getHero {

}
*/
#makeHero {
    .hero-text {
         @media (max-width: 768px) {
            /* grid-column: span 8;*/
        }
    }
    img {
        margin: 2rem auto;
        @media (max-width: 768px) {
            margin: 1rem 0 0 0;
            height: 250px;
        }
    }
}
/* ... */

